--- a/index.html
+++ b/index.html
@@ -30,38 +30,184 @@
                     </button>
                 </div>
             </div>
-            <ul class="nav__menu-lateral">
-                <li><a href="#">Início</a></li>
-                <li><h3>Artigos</h3></li>
-                <li><a href="#">Todos</a></li>
-                <li><a href="#">Em Destaque</a></li>
-                <li><h3>Mais</h3></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
         </nav>
+        <!--Este UL precisa ficar fora do nav porque se não ele
+        cobre a página inteira e não permite clicar em links-->
+        <ul class="nav__menu-lateral">
+            <li><a href="#">Início</a></li>
+            <li><h3>Artigos</h3></li>
+            <li><a href="#">Todos</a></li>
+            <li><a href="#">Em Destaque</a></li>
+            <li><h3>Mais</h3></li>
+            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
         <div class="banner">
-   
+
         </div>
     </header>
-    <section class="destaques">
-        <h2>Artigos<span>Em Destaque</span></h2>
-        <div class="cards">
-            <article class="card" id="artigo1">
-                <h3 class="card__titulo">
-                    Um titulo bem legal.
-                </h3>
-                <div class="card__informacao">
-                    <p>
-                        Publicado em: 18/11/21
-                    </p>
-                    <p>
-                        Tempo de Leitura: 5 minutos.
-                    </p>
+    <main>
+        <section class="destaques">
+            <h2>Artigos<span>Em Destaque</span></h2>
+            <div class="cards">
+
+                <div class="card" id="artigo1" onclick="location.href='#';">
+                    <h3 class="card__titulo">
+                        <a href="#">
+                            Apresentamos o health+
+                        </a>
+                    </h3>
+                    <div class="card__informacao">
+                        <p>
+                            Publicado em: 18/11/21
+                        </p>
+                        <p>
+                            Tempo de Leitura: 2 minutos
+                        </p>
+                    </div>
                 </div>
-            </article>
-        </div>
-    </section>
+
+                <div class="card" id="artigo2" onclick="location.href='#';">
+                    <h3 class="card__titulo">
+                        <a href="#">
+                            Como devo me hidratar?
+                        </a>
+                    </h3>
+                    <div class="card__informacao">
+                        <p>
+                            Publicado em: 18/11/21
+                        </p>
+                        <p>
+                            Tempo de Leitura: 10 minutos
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card" id="artigo3" onclick="location.href='#';">
+                    <h3 class="card__titulo">
+                        <a href="#">
+                            Um titulo bem legal.
+                        </a>
+                    </h3>
+                    <div class="card__informacao">
+                        <p>
+                            Publicado em: 18/11/21
+                        </p>
+                        <p>
+                            Tempo de Leitura: 5 minutos
+                        </p>
+                    </div>
+                </div>   
+
+                <div class="card" id="artigo4" onclick="location.href='#';">
+                    <h3 class="card__titulo">
+                        <a href="#">
+                            Um titulo bem legal.
+                        </a>
+                    </h3>
+                    <div class="card__informacao">
+                        <p>
+                            Publicado em: 18/11/21
+                        </p>
+                        <p>
+                            Tempo de Leitura: 5 minutos
+                        </p>
+                    </div>
+                </div>   
+
+                <div class="card" id="artigo5" onclick="location.href='#';">
+                    <h3 class="card__titulo">
+                        <a href="#">
+                            Um titulo bem legal.
+                        </a>
+                    </h3>
+                    <div class="card__informacao">
+                        <p>
+                            Publicado em: 18/11/21
+                        </p>
+                        <p>
+                            Tempo de Leitura: 5 minutos
+                        </p>
+                    </div>
+                </div>   
+            </div>
+        </section>
+        <section class="todos">
+            <div class="subnav">
+                <h2>
+                    Vendo Artigos
+                </h2>
+                <button class="subnav__ativador">
+                    novos<span class="subnav-span material-icons-outlined">expand_more</span>
+                </button>
+                <ul class="subnav__dropdown">
+                    <li><a href="#">Novos</a></li>
+                    <li><a href="#">Melhores</a></li>
+                    <li><a href="#">Para iniciantes</a></li>
+                    <li><a href="#">Por categoria</a></li>
+                </ul>
+            </div>
+            <div class="artigos">
+                <article class="artigo">
+                    <img src="https://images.unsplash.com/photo-1536152470836-b943b246224c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1938&q=80" alt="#" class="artigo__imagem">
+                    <h3 class="artigo__titulo">
+                        <a href="#">
+                            Um titulo bem legal.
+                        </a>
+                    </h3>
+                    <div class="artigo__informacoes">
+                        <p>Publicado em: 18/11/21</p>
+                        <p>Tempo de leitura: 5 minutos</p>
+                    </div>
+                    <div class="artigo__conteudo">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel qui inventore quasi explicabo ea cum.
+                        </p>  
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, nulla?
+                        </p>
+                    </div>
+                </article>
+                <article class="artigo">
+                    <img src="https://images.unsplash.com/photo-1536152470836-b943b246224c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1938&q=80" alt="#" class="artigo__imagem">
+                    <h3 class="artigo__titulo">
+                        <a href="#">
+                            Um titulo bem legal.
+                        </a>
+                    </h3>
+                    <div class="artigo__informacoes">
+                        <p>Publicado em: 18/11/21</p>
+                        <p>Tempo de leitura: 5 minutos</p>
+                    </div>
+                    <div class="artigo__conteudo">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel qui inventore quasi explicabo ea cum.
+                        </p>  
+                        <p>
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, nulla?
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <ul class="footer__sobre">
+            <li>
+                <h4>Sobre o site</h4>
+            </li>
+            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#">Política de privacidade</a></li>
+            <li><a href="#">Termos de uso</a></li>
+            <li><a href="#">Fale conosco</a></li>
+        </ul>
+        <ul class="footer__redes-sociais">
+            <li><h4>Redes sociais</h4></li>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+        </ul>
+        <h4 class="footer__logo">health<span>+</span></h4>
+    </footer>
 <!-- 
     <h2 class="artigos_recomendados">Artigos Recomendados</h2>
     <div class="recomendation-container">
@@ -171,6 +317,14 @@
             $(".nav__ativador").click(function() {
                 $(".nav__menu-lateral").toggleClass("nav__menu-lateral--ativado");
             });
+
+            $(".subnav__ativador").click(function() {
+                $(".subnav__dropdown").slideToggle(280);
+                if ($(".subnav-span").text() == "expand_more")
+                    $(".subnav-span").text("expand_less");
+                else ($(".subnav-span").text("expand_more"))
+            });
+
         });
     </script>
 </body>
