--- a/index.html
+++ b/index.html
@@ -206,7 +206,10 @@
             <li><a href="#">Facebook</a></li>
             <li><a href="#">Twitter</a></li>
         </ul>
-        <h4 class="footer__logo">health<span>+</span></h4>
+        <ul class="footer__baixo">
+            <li><h4 class="footer__logo">health<span>+</span></h4></li>
+            <li><h4 class="footer__copyright">G Softwares ©</h4></li>
+        </ul>
     </footer>
 <!-- 
     <h2 class="artigos_recomendados">Artigos Recomendados</h2>
