--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 </div>
             </div>
         </nav>
-        <!--Este UL precisa ficar fora do nav porque se não ele
-        cobre a página inteira e não permite clicar em links-->
+        <!--Este UL precisa ficar fora do nav porque se não o
+        grid faz elel cobrir a página inteira e não permite
+        clicar em links-->
         <ul class="nav__menu-lateral">
-            <li><a href="#">Início</a></li>
+            <li><a href="index.html">Início</a></li>
             <li><h3>Artigos</h3></li>
             <li><a href="#">Todos</a></li>
             <li><a href="#">Em Destaque</a></li>
@@ -51,12 +52,12 @@
             <h2>Artigos<span>Em Destaque</span></h2>
             <div class="cards">
 
-                <div class="card" id="artigo1" onclick="location.href='#';">
-                    <h3 class="card__titulo">
+                <div class="card" id="artigo1" onclick="location.href='apresentamos_o_health_plus.html';">
+                    <p class="card__titulo">
                         <a href="#">
                             Apresentamos o health+
                         </a>
-                    </h3>
+                    </p>
                     <div class="card__informacao">
                         <p>
                             Publicado em: 18/11/21
@@ -68,11 +69,11 @@
                 </div>
 
                 <div class="card" id="artigo2" onclick="location.href='#';">
-                    <h3 class="card__titulo">
+                    <p class="card__titulo">
                         <a href="#">
                             Como devo me hidratar?
                         </a>
-                    </h3>
+                    </p>
                     <div class="card__informacao">
                         <p>
                             Publicado em: 18/11/21
@@ -84,11 +85,11 @@
                 </div>
 
                 <div class="card" id="artigo3" onclick="location.href='#';">
-                    <h3 class="card__titulo">
+                    <p class="card__titulo">
                         <a href="#">
                             Um titulo bem legal.
                         </a>
-                    </h3>
+                    </p>
                     <div class="card__informacao">
                         <p>
                             Publicado em: 18/11/21
@@ -100,11 +101,11 @@
                 </div>   
 
                 <div class="card" id="artigo4" onclick="location.href='#';">
-                    <h3 class="card__titulo">
+                    <p class="card__titulo">
                         <a href="#">
                             Um titulo bem legal.
                         </a>
-                    </h3>
+                    </p>
                     <div class="card__informacao">
                         <p>
                             Publicado em: 18/11/21
@@ -116,11 +117,11 @@
                 </div>   
 
                 <div class="card" id="artigo5" onclick="location.href='#';">
-                    <h3 class="card__titulo">
+                    <p class="card__titulo">
                         <a href="#">
                             Um titulo bem legal.
                         </a>
-                    </h3>
+                    </p>
                     <div class="card__informacao">
                         <p>
                             Publicado em: 18/11/21
@@ -231,11 +232,11 @@
         </a>
     </div> -->
     <!--Seta para baixo-->
-    <fieldset>
+    <!-- <fieldset>
         <legend><a href="#anchor"><img src="images/seta.svg" alt="seta" width="30px"height="30px"></a></legend>
-    </fieldset>
+    </fieldset> -->
     <!--Video / Texto-->
-    <div id="anchor"></div>
+    <!-- <div id="anchor"></div>
     <div class="video-texto">
         <h2 class="titulo-video">Recomendação da Semana</h2>
         <div class="video-area">
@@ -249,9 +250,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae id cum doloremque provident. Blanditiis reprehenderit, deleniti quod modi velit aperiam consequatur laborum vero. Beatae modi placeat ab deserunt in praesentium!  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ex eveniet veritatis eius repudiandae repellendus tempora eaque nesciunt, sed impedit quisquam nihil, quo illo. Quasi, harum ratione. Eius, atque molestias! Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima corrupti, quidem recusandae unde officia voluptas quasi laudantium laborum sint mollitia nihil voluptatibus ducimus dolorum necessitatibus quia sit dignissimos rem ipsum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus iste tempora reprehenderit. Asperiores commodi deserunt at sit harum. Modi pariatur asperiores sequi consectetur nesciunt eveniet maxime illo ullam magni fugit? </p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!--Calculadora de IMC-->
-    <div class="imc-container">
+    <!-- <div class="imc-container">
         <div class="titulo-imc">
         <h2>Vamos checar seu IMC?</h2>
         </div>
@@ -290,9 +291,9 @@
             </div>
         </div>
         <script src="js/script.js"></script>
-    </div>
+    </div> -->
     <!--Formulário de contato-->
-    <div class="formulario">
+    <!-- <div class="formulario">
         <form>
             <legend>Contato</legend>
             <input type="text" placeholder="Nome" required>
@@ -300,21 +301,7 @@
             <textarea placeholder="Mensagem" autocomplete="off" required></textarea>
             <button type="submit">Enviar</button>
         </form>
-    </div>
-    <!--Footer / Rodapé-->
-    <footer>
-        <div class="logo-rodape">
-            <div class="texto-rodape">
-                <h4>G Softwares © Copywriting</h4>
-                <h5>Todos os direitos reservados</h5>
-            </div>
-        </div>
-        <div class="redes-rodape">
-            <div class="facebook"><a href="https://www.facebook.com/healthplus.oficial" target="_blank"><img src="images/facebook.svg" alt="facebook" width="35px" height="35px"></a></div>
-            <div class="instagram"><a href="https://instagram.com/healthplus.oficial" target="_blank"><img src="images/instagram.svg" alt="instagram" width="35px" height="35px"></a></div>
-            <div class="twitter"><a href="https://twitter.com/healthplus_ofi" target="_blank"><img src="images/twitter.svg" alt="twitter" width="35px" height="35px"></a></div>
-        </div>
-    </footer>
+    </div> -->
     <script>
         $(document).ready(function() {
             $(".nav__ativador").click(function() {
